Adding new javascript files to HTML page

--- a/morefunctions.html
+++ b/morefunctions.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="/functions/more_functions.js"></script>
+    <script src="/functions/f_to_c.js"></script>
+    <script src="/functions/tax_functions.js"></script>
 </head>
 <body>
     this code is running properly!!
+    
 </body>
 </html>
